# course-project

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: command.h  connection.h
client/src/: client.cpp  command.cpp  connection.cpp
server/: CMakeLists.txt
server/include/: connection.h  h.h  message.h  search.h  searches.h  select.h  server.h  sort.h  sorts.h
server/src/: algorithm.cpp  connection.cpp  message.cpp  search.cpp  searches.cpp  server.cpp  sorts.cpp
